tests/NormalTests/paczka1/small_fuzzy/19043869.err
Error in line 1: ycNU7TL14B S652 78,6
Error in line 5: 6mkJT A864 74,7
